Fix tests to run under 17 & build under 8 & actually test non-11 versions & use cimg (#197)