@@ -23,24 +23,18 @@
       <properties>
         <maven.main.skip>true</maven.main.skip>
         <maven.test.skip>true</maven.test.skip>
+        <fmt.skip>true</fmt.skip>
       </properties>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>com.coveo</groupId>
-            <artifactId>fmt-maven-plugin</artifactId>
-            <configuration>
-              <skip>true</skip>
-            </configuration>
-          </plugin>
-        </plugins>
-      </build>
     </profile>
     <profile>
       <id>jdk17+</id>
       <activation>
         <jdk>[17,)</jdk>
       </activation>
+      <properties>
+        <!-- surefire -->
+        <argLine>--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</argLine>
+      </properties>
     </profile>
   </profiles>
 
